fix: prevent layout shift and appearance of horizontal scroll

--- a/src/.vuepress/theme/styles/index.styl
+++ b/src/.vuepress/theme/styles/index.styl
@@ -9,6 +9,7 @@ html, body
   padding 0
   margin 0
   background-color #fff
+  overflow-x hidden
 
 body
   font-family $fontPrimary
